--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ end_of_line = crlf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{csproj,config,md}]
+[*.{csproj,config,md,yml}]
 indent_style = space
 indent_size = 2
 
